--- a/style.scss
+++ b/style.scss
@@ -4,78 +4,215 @@
     box-sizing: border-box;
     text-align: center;
     justify-content: center;
-    font-size: 18px;
-}
-
-.navbar {
-    background: rgb(61, 190, 255);
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px;
-}
-
-.navbar_links ul {
-    display: flex;
-}
-
-li {
     list-style: none;
-}
-
-.navbar_links li a {
-    padding: 1rem;
     text-decoration: none;
-    color: white;
+}
+    @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap');
+
+
+body {
+    font-size: 18px;
+    width: 100vw;
 }
 
-.header {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-h1 {
-    padding: 50px;
-    font-size: 45px;
-}
 
 header {
+    height: 100vh;
     color: white;
-    text-align: center;
-    background-image: url(./img/desktop/image-header.jpg);
-    background-size: cover;
-    background-position: center bottom;
-    height: 570px;
+    background: url(./img/mobile/image-header.jpg) bottom center/cover;
+    
+    & h1 {
+        padding-top: 50px;
+        font-family: 'Fraunces', serif;
+        font-size: 50px;
+    }
+
+    & figure {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 30%;
+    }
 }
+
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(auto, 600px);
+    grid-template-columns: repeat(1fr);
+    
+    & img {
+        width: 100%;
+        height: 50vh;
+    }
+
+    & h2 {
+        padding-bottom: 15%;
+    }
+
+    & p {
+        padding-bottom: 15%;
+    }
 }
 
-.transform {
-    text-align: center;
+
+.transform, .audience {
+    background-color: hsl(0, 0%, 100%);
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: hsl(0, 0%, 100%);
+    padding-left: 20px;
+    padding-right: 20px;
+
+    & h2, a {
+        color: hsl(212, 27%, 19%);
+    }
+
+    & h2 {
+        font-family: 'Fraunces', serif;
+    }
+
+    & p {
+        color: #95949A;
+        font-family: 'Barlow', sans-serif;
+    }
+
+    & a {
+        font-family: 'Barlow', sans-serif;
+    }
 }
 
-.egg{
-    background-image: url(./img/desktop/image-transform.jpg);
-}
-
-.glass {
-    background-image: url(./img/desktop/image-stand-out.jpg);
+.egg, .glass {
+    height: 50vh;
+    
 }
 
 .graphic {
-    background-image: url(./img/desktop/image-graphic-design.jpg);
+    height: 80vh;
+    background: url(./img/desktop/image-graphic-design.jpg) center/cover;
+    display: flex;
+    flex-direction: column;
+    padding-top: 80%;
+    padding-left: 12%;
+    padding-right: 12%;
+    color: hsl(167, 40%, 24%);
+    
+
+    & h3 {
+        padding-bottom: 10%;
+        font-family: 'Fraunces', serif;
+    }
+
+    & p {
+        font-family: 'Barlow', sans-serif;
+    }
 }
 
 .photography {
-    background-image: url(./img/desktop/image-photography.jpg);
+    height: 80vh;
+    background: url(./img/desktop/image-photography.jpg) center/cover;
+    display: flex;
+    flex-direction: column;
+    padding-top: 80%;
+    padding-left: 12%;
+    padding-right: 12%;
+    color: hsl(198, 62%, 26%);
+
+    & h3 {
+        padding-bottom: 10%;
+        font-family: 'Fraunces', serif;
+    }
+
+    & p {
+        font-family: 'Barlow', sans-serif;
+    }
+}
+
+
+.testimonials {
+
+    background: hsl(0, 0%, 100%);
+    
+    & h3 {
+        color: #AEAEAE;
+        padding-top: 15%;
+        padding-bottom: 15%;
+        padding-left: 12%;
+        padding-right: 12%;
+        font-family: 'Fraunces', serif;
+    }
+
+    & .testimonials_picture {
+        border-radius: 50%;
+        width: 70px;
+    }
+
+    & .testimonials_p {
+        color: #77787A;
+        padding-top: 15%;
+        padding-bottom: 15%;
+        padding-left: 12%;
+        padding-right: 12%;
+        font-family: 'Barlow', sans-serif;
+    }
+
+    & .testimonials_name {
+        color: #222A2D;
+        padding-bottom: 5%;
+        padding-left: 12%;
+        padding-right: 12%;
+        font-family: 'Fraunces', serif;
+    }
+
+    & .testimonials_job {
+        color: #BCBBB9;
+        font-size: small;
+        padding-bottom: 15%;
+        padding-left: 12%;
+        padding-right: 12%;
+    }
+}
+
+
+
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
+    & img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+footer {
+    height: 40vh;
+    padding-top: 15%;
+    background: #90D4C5;
+    text-decoration: none;
+    font-family: 'Barlow', sans-serif;
+
+    & ul {
+        padding-top: 15%;
+        & li {
+            display: inline-block;
+            align-items: center;
+            padding-bottom: 15%;
+
+            & a {
+                color: hsl(168, 34%, 41%);
+            }
+        }
+    }
+
+    & .footer_icones {
+        display: inline-block;
+        align-items: center;
+        padding-bottom: 15%;
+    }
+
 }
