--- a/style.scss
+++ b/style.scss
@@ -22,13 +22,13 @@ header {
     color: white;
     background: url(./img/mobile/image-header.jpg) bottom center/cover;
     
-    & h1 {
+    h1 {
         padding-top: 50px;
         font-family: 'Fraunces', serif;
         font-size: 50px;
     }
 
-    & figure {
+    figure {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -42,16 +42,16 @@ header {
     display: grid;
     grid-template-columns: repeat(1fr);
     
-    & img {
+    img {
         width: 100%;
         height: 50vh;
     }
 
-    & h2 {
+    h2 {
         padding-bottom: 15%;
     }
 
-    & p {
+    p {
         padding-bottom: 15%;
     }
 }
@@ -67,20 +67,20 @@ header {
     padding-left: 20px;
     padding-right: 20px;
 
-    & h2, a {
+    h2, a {
         color: hsl(212, 27%, 19%);
     }
 
-    & h2 {
+    h2 {
         font-family: 'Fraunces', serif;
     }
 
-    & p {
+    p {
         color: #95949A;
         font-family: 'Barlow', sans-serif;
     }
 
-    & a {
+    a {
         font-family: 'Barlow', sans-serif;
     }
 }
@@ -101,12 +101,12 @@ header {
     color: hsl(167, 40%, 24%);
     
 
-    & h3 {
+    h3 {
         padding-bottom: 10%;
         font-family: 'Fraunces', serif;
     }
 
-    & p {
+    p {
         font-family: 'Barlow', sans-serif;
     }
 }
@@ -121,12 +121,12 @@ header {
     padding-right: 12%;
     color: hsl(198, 62%, 26%);
 
-    & h3 {
+    h3 {
         padding-bottom: 10%;
         font-family: 'Fraunces', serif;
     }
 
-    & p {
+    p {
         font-family: 'Barlow', sans-serif;
     }
 }
@@ -136,7 +136,7 @@ header {
 
     background: hsl(0, 0%, 100%);
     
-    & h3 {
+    h3 {
         color: #AEAEAE;
         padding-top: 15%;
         padding-bottom: 15%;
@@ -145,12 +145,12 @@ header {
         font-family: 'Fraunces', serif;
     }
 
-    & .testimonials_picture {
+    .testimonials_picture {
         border-radius: 50%;
         width: 70px;
     }
 
-    & .testimonials_p {
+    .testimonials_p {
         color: #77787A;
         padding-top: 15%;
         padding-bottom: 15%;
@@ -159,7 +159,7 @@ header {
         font-family: 'Barlow', sans-serif;
     }
 
-    & .testimonials_name {
+    .testimonials_name {
         color: #222A2D;
         padding-bottom: 5%;
         padding-left: 12%;
@@ -167,7 +167,7 @@ header {
         font-family: 'Fraunces', serif;
     }
 
-    & .testimonials_job {
+    .testimonials_job {
         color: #BCBBB9;
         font-size: small;
         padding-bottom: 15%;
@@ -183,7 +183,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     
-    & img {
+    img {
         width: 100%;
         height: 100%;
     }
@@ -196,20 +196,20 @@ footer {
     text-decoration: none;
     font-family: 'Barlow', sans-serif;
 
-    & ul {
+    ul {
         padding-top: 15%;
-        & li {
+         li {
             display: inline-block;
             align-items: center;
             padding-bottom: 15%;
 
-            & a {
+             a {
                 color: hsl(168, 34%, 41%);
             }
         }
     }
 
-    & .footer_icones {
+    .footer_icones {
         display: inline-block;
         align-items: center;
         padding-bottom: 15%;
