--- a/style.scss
+++ b/style.scss
@@ -313,7 +313,11 @@ footer {
         display: inline-block;
         align-items: center;
         padding-bottom: 15%;
-        
+    }
+
+    a {
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
 }
