--- a/style.css
+++ b/style.css
@@ -19,18 +19,19 @@ body {
 }
 
 header {
-  height: 100vh;
   color: white;
   background: url(./img/mobile/image-header.jpg) bottom center/cover;
 }
 
 header h1 {
-  padding-top: 30%;
+  padding-top: 20%;
+  padding-bottom: 15%;
   font-family: 'Fraunces', serif;
-  font-size: 50px;
+  font-size: 2.5rem;
+  letter-spacing: .3rem;
 }
 
-header figure {
+header .headerimg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,7 +45,7 @@ header figure {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 20%;
+  padding-bottom: 40%;
 }
 
 header .navbar_brandname {
@@ -134,17 +135,6 @@ a:hover, a:active {
   opacity: 100%;
   -webkit-transition: all ease-in-out 0.1s;
   transition: all ease-in-out 0.1s;
-}
-
-@media screen and (min-width: 600px) {
-  #menuToggle {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
 }
 
 .wrapper {
@@ -317,14 +307,13 @@ a:hover, a:active {
 }
 
 footer {
-  height: 40vh;
   padding-top: 15%;
   background: #90D4C5;
   text-decoration: none;
   font-family: 'Barlow', sans-serif;
 }
 
-footer img {
+footer #logo {
   -webkit-filter: invert(70%) sepia(80%) saturate(500%) hue-rotate(116deg) brightness(95%) contrast(100%);
           filter: invert(70%) sepia(80%) saturate(500%) hue-rotate(116deg) brightness(95%) contrast(100%);
 }
@@ -343,10 +332,6 @@ footer ul li {
   padding-right: 5%;
 }
 
-footer ul li a {
-  color: #458c7e;
-}
-
 footer .footer_icones {
   display: inline-block;
   -webkit-box-align: center;
@@ -358,5 +343,59 @@ footer .footer_icones {
 footer a {
   padding-left: 5%;
   padding-right: 5%;
+  color: #2C7363;
+}
+
+@media screen and (min-width: 600px) {
+  header {
+    background: url(./img/desktop/image-header.jpg) no-repeat bottom/cover;
+    height: 80vh;
+  }
+  header h1 {
+    padding-top: 5%;
+    padding-bottom: 10%;
+  }
+  header figure {
+    height: 30%;
+  }
+  .wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .wrapper h2 {
+    padding-bottom: 15%;
+  }
+  .wrapper p {
+    padding-bottom: 15%;
+  }
+  .transform, .audience {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .gallery {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+  .gallery img {
+    width: 100%;
+    height: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
