--- a/style.scss
+++ b/style.scss
@@ -7,8 +7,9 @@
     list-style: none;
     text-decoration: none;
 }
-    @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap');
 
 
 body {
@@ -43,6 +44,14 @@ header {
         padding-left: 5%;
         display: flex;
         justify-content: flex-start;
+    }
+
+    a {
+        height: 18px;
+        &:hover, &:active {
+            border-radius: 30%;
+            background: yellow;
+        }
     }
 }
 
@@ -82,13 +91,8 @@ header {
   z-index: 1;
 }
 
-a {
-    height: 18px;
-    &:hover, &:active {
-        border-radius: 30%;
-        background: yellow;
-    }
-}
+
+
 
 #menu {
     clip-path: polygon(0 11%, 90% 11%, 100% 0, 100% 100%, 75% 100%, 51% 100%, 0 100%);
@@ -119,118 +123,114 @@ a {
   
 }
 
-//******************END***************//
+//******************MENU***END***************//
 
 
 .wrapper {
     display: grid;
     grid-template-columns: repeat(1fr);
     
-    img {
-        width: 100%;
-        height: 50vh;
-    }
+        img {
+            width: 100%;
+            height: 100%;
+        }
 
-    h2 {
-        padding-bottom: 15%;
-    }
+        h2 {
+            padding-bottom: 15%;
+        }
 
-    p {
-        padding-bottom: 15%;
-    }
-}
-
-
-.transform, .audience {
-    background-color: hsl(0, 0%, 100%);
-    height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
-
-    h2, a {
-        color: hsl(212, 27%, 19%);
-    }
-
-    h2 {
-        font-family: 'Fraunces', serif;
-    }
-
-    p {
-        color: #95949A;
-        font-family: 'Barlow', sans-serif;
-    }
-
-    a {
-        font-family: 'Barlow', sans-serif;
-        padding-bottom: 15px;
-        border-bottom: solid 10px #FFD8D1;
-        border-radius: 10%;
-    }
-}
-
-.egg, .glass {
-    height: 50vh;
-    
-}
-
-.graphic {
-    height: 80vh;
-    background: url(./img/desktop/image-graphic-design.jpg) center/cover;
-    display: flex;
-    flex-direction: column;
-    padding-top: 80%;
-    padding-left: 12%;
-    padding-right: 12%;
-    color: hsl(167, 40%, 24%);
+        p {
+            padding-bottom: 15%;
+        }
     
 
-    h3 {
-        padding-bottom: 10%;
-        font-family: 'Fraunces', serif;
+
+    .transform, .audience {
+        background-color: hsl(0, 0%, 100%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 15%;
+
+        h2, a {
+            color: hsl(212, 27%, 19%);
+        }
+
+        h2 {
+            font-family: 'Fraunces', serif;
+        }
+
+        p {
+            color: #95949A;
+            font-family: 'Barlow', sans-serif;
+        }
+
+        a {
+            font-family: 'Barlow', sans-serif;
+            text-shadow: 
+            0px 10px 15px red;
+            border-radius: 10%;
+        }
     }
 
-    p {
-        font-family: 'Barlow', sans-serif;
+    
+
+    .graphic {
+        height: 80vh;
+        background: url(./img/desktop/image-graphic-design.jpg) center/cover;
+        display: flex;
+        flex-direction: column;
+        padding-top: 80%;
+        padding-left: 12%;
+        padding-right: 12%;
+        color: hsl(167, 40%, 24%);
+        
+
+        h3 {
+            padding-bottom: 10%;
+            font-family: 'Fraunces', serif;
+        }
+
+        p {
+            font-family: 'Barlow', sans-serif;
+        }
+    }
+
+    .photography {
+        height: 80vh;
+        background: url(./img/desktop/image-photography.jpg) center/cover;
+        display: flex;
+        flex-direction: column;
+        padding-top: 80%;
+        padding-left: 12%;
+        padding-right: 12%;
+        color: hsl(198, 62%, 26%);
+
+        h3 {
+            padding-bottom: 10%;
+            font-family: 'Fraunces', serif;
+        }
+
+        p {
+            font-family: 'Barlow', sans-serif;
+        }
     }
 }
 
-.photography {
-    height: 80vh;
-    background: url(./img/desktop/image-photography.jpg) center/cover;
-    display: flex;
-    flex-direction: column;
-    padding-top: 80%;
+
+.test {
+    color: #AEAEAE;
+    padding-top: 15%;
+    padding-bottom: 15%;
     padding-left: 12%;
     padding-right: 12%;
-    color: hsl(198, 62%, 26%);
-
-    h3 {
-        padding-bottom: 10%;
-        font-family: 'Fraunces', serif;
-    }
-
-    p {
-        font-family: 'Barlow', sans-serif;
-    }
+    font-family: 'Fraunces', serif;
 }
-
 
 .testimonials {
 
     background: hsl(0, 0%, 100%);
-    
-    h3 {
-        color: #AEAEAE;
-        padding-top: 15%;
-        padding-bottom: 15%;
-        padding-left: 12%;
-        padding-right: 12%;
-        font-family: 'Fraunces', serif;
-    }
 
     .testimonials_picture {
         border-radius: 50%;
@@ -313,47 +313,95 @@ footer {
 }
 
 
-//***************DESKTOP ADAPTATION****************//
+//*************************DESKTOP ADAPTATION****************************//
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
     header {
         background: url(./img/desktop/image-header.jpg) no-repeat bottom/cover;
         height: 80vh;
 
+        .navbar_brandname {
+            padding-top: 3%;
+            padding-left: 2%;
+        }
+
         h1 {
-            padding-top: 5%;
-            padding-bottom: 10%;
+            font-size: 3.5rem;
+            padding-top: 10vh;
+            padding-bottom: 10vh;
         }
 
-        figure {
-            height: 30%;
-        }
     }
-    
-
-
 
     .wrapper {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    
-        h2 {
-            padding-bottom: 15%;
-        }
-    
-        p {
-            padding-bottom: 15%;
-        }
-    }
-
-    .transform, .audience {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
         
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-left: 20px;
-        padding-right: 20px;
+            h2 {
+                padding-bottom: 15%;
+            }
+        
+            p {
+                padding-bottom: 15%;
+            }
+
+        .transform, .audience {
+
+            height: 45vh;
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            padding-left: 5em;
+            padding-right: 5em;
+            padding-top: 10%;
+            padding-bottom: 10%;
+
+            h2 {
+                font-size: 2rem;
+                text-align: left;
+                padding-top: 20%;
+                padding-bottom: 5%;
+            }
+
+            p {
+                text-align: left;
+                padding-top: 5%;
+                padding-bottom: 5%;
+            }
+        
+            a {
+                text-align: left;
+                border-radius: 10%;
+                padding-top: 5%;
+                padding-bottom: 20%;
+            }
+        }
+
+        .graphic, .photography{
+            padding-top: 50%;
+            height: auto;
+            padding-left: 25%;
+            padding-right: 25%;
+            
+            
+            p {
+                font-size: 14px;
+
+            }
+        } 
+
+        .graphic {
+            background: url(./img/desktop/image-graphic-design.jpg) center/cover;
+        }
+
+        .photography {
+            background: url(./img/desktop/image-photography.jpg) center/cover;
+        }
+        
+        .egg, .glass {
+            height: 100%;
+        }
+
     }
 
     .gallery {
@@ -366,9 +414,48 @@ footer {
         }
     }
 
+    .test {
+        padding-top: 10%;
+        padding-bottom: 5%;
+    }
+
+    .testimonials {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding-left: 10%;
+        padding-right: 10%;
+
+    }
+
+    footer {
+        padding-top: 5%;
+        background: #90D4C5;
+        text-decoration: none;
+        font-family: 'Barlow', sans-serif;
+        
+
+        #logo {
+            filter: invert(70%) sepia(80%) saturate(500%) hue-rotate(116deg) brightness(95%) contrast(100%);
+        }
+
+        ul {
+            padding-top: 5%;
+            
+            li {
+                padding-bottom: 5%;
+                padding-left: 2%;
+                padding-right: 2%;
+            }
+        }
+
+        a {
+            padding-left: 2%;
+            padding-right: 2%;
+            color: #2C7363;
+        }
+        
 
 
-
-
+    }
 
 }
